# AdventOfCode

./: .envrc  .gitattributes  .gitignore  .leaderboard.csv  .ranks.csv  Cargo.toml  LICENSE  README.md  aoc.py  download_input.sh  flake.nix  get_session.py  haskell_template.ipynb  justfile  lib.rs  live.py  prepare.ipynb  rust_template.rs  shell.nix  template.ipynb  utils.py
.github/workflows/: update_readme.yml
2015/: 01.txt  02.ipynb  02.txt  03.ipynb  03.txt  04.txt  05.ipynb  05.txt  06.ipynb  06.txt  07.txt  08.txt  09.ipynb  09.txt  10.txt  11.ipynb  11.txt  12.ipynb  12.txt  13.txt  14.ipynb  14.txt  15.txt  16.txt  17.ipynb  17.txt  18.ipynb  18.txt  19.ipynb  19.txt  20.txt  21.ipynb  21.txt  22.txt  23.txt  24.txt  25.txt
2016/: 01.txt  02.ipynb  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.ipynb  08.txt  09.ipynb  09.txt  10.ipynb  10.txt  11.ipynb  11.txt  12.ipynb  12.txt  13.txt  14.ipynb  14.txt  15.txt  16.txt  17.ipynb  17.txt  18.ipynb  18.txt  19.txt  20.txt  21.ipynb  21.txt  22.ipynb  22.txt  23.txt  24.txt  25.txt
2017/: 01.ipynb  01.txt  02.ipynb  02.txt  03.txt  04.txt  05.txt  06.ipynb  06.txt  07.ipynb  07.txt  08.txt  09.txt  10.txt  11.ipynb  11.txt  12.ipynb  12.txt  13.ipynb  13.txt  14.ipynb  14.txt  15.txt  16.ipynb  16.txt  17.ipynb  17.txt  18.ipynb  18.txt  19.ipynb  19.txt  20.txt  21.txt  22.txt  23.ipynb  23.txt  24.txt  25.ipynb  25.txt
2018/: 11.ipynb  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.ipynb  17.txt  18.ipynb  18.txt  19.ipynb  19.txt  20.ipynb  20.txt  21.txt  22.ipynb  22.txt  23.txt  24.ipynb  24.txt  25.txt
2018/Day01/: puzzle1.py  puzzle2.py
2018/Day02/: puzzle2.py
2018/Day04/: input.txt  puzzle1.py
2018/Day05/: input.txt  puzzle1.py  puzzle2.py
2018/Day06/: puzzle1.py  puzzle2.py
2018/Day07/: input.txt  puzzle2.py
2018/Day08/: input.txt  puzzle1.py  puzzle2.py
2018/Day09/: puzzle1.py
2018/Day10/: puzzle1.py
2019/: intcode.py
2019/Day01/: puzzle2.py
2019/Day03/: puzzle1.py  puzzle2.py
2019/Day04/: input.txt  puzzle1.py  puzzle2.py
2019/Day05/: puzzle2.py
2019/Day06/: input.txt
2019/Day07/: input.txt  puzzle1.py  puzzle2.py
2019/Day08/: puzzle2.py
2019/Day09/: input.txt  puzzle1.py  puzzle2.py
2019/Day10/: puzzle1.py
2019/Day11/: puzzle1.py  puzzle2.py
2019/Day14/: puzzle2.py
2019/Day15/: puzzle1.py  (+1 more)
2020/: 01.ipynb  01.rs  01.txt  01_haskell.ipynb  02.ipynb  02.rs  02.txt  02_haskell.ipynb  03.rs  03.txt  03_haskell.ipynb  04.ipynb  04.rs  04.txt  04_haskell.ipynb  05.ipynb  05.txt  05_haskell.ipynb  06.ipynb  06.txt  06_haskell.ipynb  07.ipynb  07.txt  07_haskell.ipynb  08.ipynb  08.txt  08_haskell.ipynb  09.ipynb  09.txt  09_haskell.ipynb  10.ipynb  10.txt  10_haskell.ipynb  11.ipynb  11.txt  11_haskell.ipynb  12.txt  12_haskell.ipynb  13.ipynb  13.txt  (+28 more)
2021/: 01.apl  01.ipynb  01.rs  01.txt  01_apl.ipynb  02.awk  02.ipynb  02.rs  02.txt  02_apl.ipynb  03.ipynb  03.rs  03.txt  04.ipynb  04.rs  04.txt  04_apl.ipynb  05.ipynb  05.rs  05.txt  05_apl.ipynb  06.ipynb  06.rs  06.txt  07.ipynb  07.rs  07.txt  07_apl.ipynb  08.ipynb  08.rs  08.txt  09.rs  09.txt  10.rs  10.txt  10_apl.ipynb  11.ipynb  11.rs  11.txt  11_apl.ipynb  (+40 more)
2022/: 01.py  01.rs  01.txt  02.py  02.rs  02.txt  03.py  03.rs  03.txt  04.py  04.rs  04.txt  05.py  05.rs  05.txt  06.rs  06.txt  07.rs  07.txt  08.rs  08.txt  09.py  09.rs  09.txt  10.py  10.rs  10.txt  11.rs  11.txt  12.py  12.rs  12.txt  13.rs  13.txt  14.py  14.rs  14.txt  15.py  15.rs  15.txt  (+7 more)
APL/: justfile
Haskell/: Lib.hs  justfile
Nix/: justfile
Nu/: justfile
Python/: justfile
Ruby/: justfile
Rust/: Cargo.toml  justfile
Rust/2015/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  main.rs
Rust/2019/: 02.rs  05.rs  09.rs  intcode.rs  main.rs
Rust/2020/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs
Rust/2021/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  main.rs
Rust/2022/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  main.rs
Rust/2023/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  main.rs
Rust/2024/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  main.rs
Rust/lib/: arrays.rs  bitset.rs  grid.rs  intcode.rs  iter_ext.rs  lib.rs  math.rs  range.rs  trie.rs  tuples.rs
Uiua/: justfile  lib.ua
leaderboards/: 2015.csv  2015.md  2016.csv  2016.md  2017.csv  2017.md  2018.csv  2018.md  2019.csv  2019.md  2020.csv  2020.md  2021.csv  2021.md  2022.csv  2022.md  2023.csv  2023.md
lib/: grid.rs  iter_ext.rs  lib.rs  parsing.rs
live/: lib  live.py
rust_benchmarks/: 2022.md  2022_01_0737b727.txt  2022_01_78985692.txt  2022_01_b1d8ea06.txt  2022_01_f86172c0.txt  2022_02_33c6dada.txt  2022_02_47b3df26.txt  2022_02_70a7e7f2.txt  2022_02_9a33f29f.txt  2022_03_24d42082.txt  2022_03_54984c81.txt  2022_03_93a60beb.txt  2022_03_d3d4e3ba.txt  2022_04_320b0487.txt  2022_04_3ee1c0cf.txt  2022_04_492c38ee.txt  2022_04_89a3a8b5.txt  2022_05_1020da16.txt  2022_05_b61c60e5.txt  2022_06_04b57819.txt  2022_06_fb7fed59.txt  2022_07_3b9cbb00.txt  2022_07_d925482a.txt  2022_07_eec8feb8.txt  2022_08_3b11f1bf.txt  2022_08_7bd53d46.txt  2022_08_ea6b2233.txt  2022_09_41fc1524.txt  2022_09_dd3a3174.txt  2022_10_f59c48c7.txt  2022_11_01edb997.txt  2022_11_781d9aa3.txt  2022_12_951c3218.txt  2022_13_af787225.txt  2022_14_b973678f.txt  2022_15_74cbdca6.txt  2022_16_26af70d0.txt  2022_17_a49eb080.txt  2022_18_4e0da2a4.txt
scripts/: download_input.sh  fetch_ranks.py  generate-readme.py  get_session.py  live.py  live.sh  prune_leaderboard.py
templates/: rust_year.rs
utils/: list.py  live.py  parsing.py
(+478 files in other folders)
