[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[dependencies]
regex = "*"
counter = "*"
rustc-hash = "*"
criterion = "0.4.0"
itertools = "0.10.5"
num = "0.4.0"

[features]
default = ["test_input"]
test_input = []

[lib]
name = "aoc"
path = "lib/lib.rs"

[[bin]]
name = "2022_01"
path = "2022/01.rs"

[[bench]]
name = "2022_01"
path = "2022/01.rs"
harness = false

[[bin]]
name = "2022_02"
path = "2022/02.rs"

[[bench]]
name = "2022_02"
path = "2022/02.rs"
harness = false

[[bin]]
name = "2022_03"
path = "2022/03.rs"

[[bench]]
name = "2022_03"
path = "2022/03.rs"
harness = false

[[bin]]
name = "2022_04"
path = "2022/04.rs"

[[bench]]
name = "2022_04"
path = "2022/04.rs"
harness = false

[[bin]]
name = "2022_05"
path = "2022/05.rs"

[[bench]]
name = "2022_05"
path = "2022/05.rs"
harness = false

[[bin]]
name = "2022_06"
path = "2022/06.rs"

[[bench]]
name = "2022_06"
path = "2022/06.rs"
harness = false

[[bin]]
name = "2022_07"
path = "2022/07.rs"

[[bench]]
name = "2022_07"
path = "2022/07.rs"
harness = false

[[bin]]
name = "2022_08"
path = "2022/08.rs"

[[bench]]
name = "2022_08"
path = "2022/08.rs"
harness = false

[[bin]]
name = "2022_09"
path = "2022/09.rs"

[[bench]]
name = "2022_09"
path = "2022/09.rs"
harness = false

[[bin]]
name = "2022_10"
path = "2022/10.rs"

[[bench]]
name = "2022_10"
path = "2022/10.rs"
harness = false

[[bin]]
name = "2022_11"
path = "2022/11.rs"

[[bench]]
name = "2022_11"
path = "2022/11.rs"
harness = false

[[bin]]
name = "2022_13"
path = "2022/13.rs"

[[bench]]
name = "2022_13"
path = "2022/13.rs"
harness = false
