[package]
name = "aoc"
version = "0.0.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[dependencies]
counter = "0.5.7"
indexmap = "2.1.0"
itertools = "0.11.0"
ndarray = "0.15.6"
num = "0.4.1"
paste = "1.0.14"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
smallvec = "1.11.1"

[dev-dependencies]
proptest = "1.3.1"

[lib]
name = "aoc"
path = "lib/lib.rs"

# 2020
[[bin]]
name = "2020_01"
path = "2020/01.rs"
[[bin]]
name = "2020_02"
path = "2020/02.rs"
[[bin]]
name = "2020_03"
path = "2020/03.rs"
[[bin]]
name = "2020_04"
path = "2020/04.rs"
[[bin]]
name = "2020_05"
path = "2020/05.rs"
[[bin]]
name = "2020_06"
path = "2020/06.rs"
[[bin]]
name = "2020_07"
path = "2020/07.rs"
[[bin]]
name = "2020_08"
path = "2020/08.rs"
[[bin]]
name = "2020_09"
path = "2020/09.rs"
[[bin]]
name = "2020_10"
path = "2020/10.rs"

# 2021
[[bin]]
name = "2021_01"
path = "2021/01.rs"
[[bin]]
name = "2021_02"
path = "2021/02.rs"
[[bin]]
name = "2021_03"
path = "2021/03.rs"
[[bin]]
name = "2021_04"
path = "2021/04.rs"
[[bin]]
name = "2021_05"
path = "2021/05.rs"
[[bin]]
name = "2021_06"
path = "2021/06.rs"
[[bin]]
name = "2021_07"
path = "2021/07.rs"
[[bin]]
name = "2021_08"
path = "2021/08.rs"
[[bin]]
name = "2021_09"
path = "2021/09.rs"
[[bin]]
name = "2021_10"
path = "2021/10.rs"
[[bin]]
name = "2021_11"
path = "2021/11.rs"
[[bin]]
name = "2021_12"
path = "2021/12.rs"
[[bin]]
name = "2021_13"
path = "2021/13.rs"
[[bin]]
name = "2021_14"
path = "2021/14.rs"
[[bin]]
name = "2021_15"
path = "2021/15.rs"
[[bin]]
name = "2021_16"
path = "2021/16.rs"
[[bin]]
name = "2021_17"
path = "2021/17.rs"
[[bin]]
name = "2021_18"
path = "2021/18.rs"
[[bin]]
name = "2021_19"
path = "2021/19.rs"
[[bin]]
name = "2021_20"
path = "2021/20.rs"
[[bin]]
name = "2021_21"
path = "2021/21.rs"
[[bin]]
name = "2021_22"
path = "2021/22.rs"
[[bin]]
name = "2021_23"
path = "2021/23.rs"
[[bin]]
name = "2021_24"
path = "2021/24.rs"
[[bin]]
name = "2021_25"
path = "2021/25.rs"

# 2022
[[bin]]
name = "2022_01"
path = "2022/01.rs"
[[bin]]
name = "2022_02"
path = "2022/02.rs"
[[bin]]
name = "2022_03"
path = "2022/03.rs"
[[bin]]
name = "2022_04"
path = "2022/04.rs"
[[bin]]
name = "2022_05"
path = "2022/05.rs"
[[bin]]
name = "2022_06"
path = "2022/06.rs"
[[bin]]
name = "2022_07"
path = "2022/07.rs"
[[bin]]
name = "2022_08"
path = "2022/08.rs"
[[bin]]
name = "2022_09"
path = "2022/09.rs"
[[bin]]
name = "2022_10"
path = "2022/10.rs"
[[bin]]
name = "2022_11"
path = "2022/11.rs"
[[bin]]
name = "2022_12"
path = "2022/12.rs"
[[bin]]
name = "2022_13"
path = "2022/13.rs"
[[bin]]
name = "2022_14"
path = "2022/14.rs"
[[bin]]
name = "2022_15"
path = "2022/15.rs"
[[bin]]
name = "2022_16"
path = "2022/16.rs"
[[bin]]
name = "2022_17"
path = "2022/17.rs"
[[bin]]
name = "2022_18"
path = "2022/18.rs"
[[bin]]
name = "2022_19"
path = "2022/19.rs"
[[bin]]
name = "2022_20"
path = "2022/20.rs"
[[bin]]
name = "2022_21"
path = "2022/21.rs"
[[bin]]
name = "2022_22"
path = "2022/22.rs"
[[bin]]
name = "2022_23"
path = "2022/23.rs"
[[bin]]
name = "2022_24"
path = "2022/24.rs"
[[bin]]
name = "2022_25"
path = "2022/25.rs"

# 2023
[[bin]]
name = "2023_01"
path = "2023/01.rs"
[[bin]]
name = "2023_02"
path = "2023/02.rs"
[[bin]]
name = "2023_03"
path = "2023/03.rs"
[[bin]]
name = "2023_04"
path = "2023/04.rs"
[[bin]]
name = "2023_05"
path = "2023/05.rs"
[[bin]]
name = "2023_06"
path = "2023/06.rs"
[[bin]]
name = "2023_07"
path = "2023/07.rs"
[[bin]]
name = "2023_08"
path = "2023/08.rs"
[[bin]]
name = "2023_09"
path = "2023/09.rs"
[[bin]]
name = "2023_10"
path = "2023/10.rs"
[[bin]]
name = "2023_11"
path = "2023/11.rs"
[[bin]]
name = "2023_12"
path = "2023/12.rs"
[[bin]]
name = "2023_13"
path = "2023/13.rs"
[[bin]]
name = "2023_14"
path = "2023/14.rs"
[[bin]]
name = "2023_15"
path = "2023/15.rs"
[[bin]]
name = "2023_16"
path = "2023/16.rs"
